--- a/imageDiff/package.json
+++ b/imageDiff/package.json
@@ -15,20 +15,17 @@
     "serve-favicon": "~2.2.0",
 
 
-    "co": "4.5.1",
-    "q": "1.2.0",
+    "js-yaml": "3.2.7",
+
+    "async": "0.9.0",
 
     "request": "2.55.0",
     "resemble": "1.2.1",
     "gm": "1.17.0",
 
+    "tinderjs": "1.0.8",
 
-
-    "passport": "0.2.1",
-    "facebook-search": "*",
-    "fbgraph": "*",
-    "passport-facebook": "2.0.0"
-
+    "fbgraph": "0.3.0"
 
   }
 }
