add gem: activerecord-import to bulk upsert

--- a/twitter/Gemfile
+++ b/twitter/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
-ruby '2.1.2'
 
 gem 'twitter'
 gem 'tweetstream'
 gem 'activerecord'
+gem 'activerecord-import'
 gem 'mysql2'
