--- a/imageDiff/package.json
+++ b/imageDiff/package.json
@@ -15,18 +15,20 @@
     "serve-favicon": "~2.2.0",
 
 
-    "fs-extra": "0.18.0",
-    "js-yaml": "3.2.7",
+    "fs-extra": "~0.18.0",
+    "js-yaml": "~3.2.7",
 
-    "async": "0.9.0",
+    "async": "~0.9.0",
+    "co": "*",
+    "thunkify": "*",
 
-    "request": "2.55.0",
-    "resemble": "1.2.1",
-    "gm": "1.17.0",
+    "request": "~2.55.0",
+    "resemble": "~1.2.1",
+    "gm": "~1.17.0",
 
-    "tinderjs": "1.0.8",
+    "tinderjs": "~1.0.8",
 
-    "fbgraph": "0.3.0"
+    "fbgraph": "~0.3.0"
 
   }
 }
