--- a/doppel/package.json
+++ b/doppel/package.json
@@ -14,7 +14,11 @@
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
 
+    "fs-extra": "~0.18.0",
+    "request": "~2.55.0",
+
     "config": "~1.12.0",
     "twitter": "~1.2.5"
+
   }
 }
