--- a/doppel/package.json
+++ b/doppel/package.json
@@ -16,6 +16,7 @@
 
     "fs-extra": "~0.18.0",
     "request": "~2.55.0",
+    "mysql": "~2.6.2",
 
     "config": "~1.12.0",
     "nightmare": "~1.8.0",
