--- a/wantedly/Gemfile
+++ b/wantedly/Gemfile
@@ -1,5 +1,7 @@
 source "https://rubygems.org"
 
 gem 'mechanize'
+gem 'mysql2', '~> 0.3.20'
 gem 'activerecord'
 gem 'activerecord-import'
+gem 'nokogiri'
